cabal-version:   3.0
name:            hasp
version:         0.1.0.0
license:         Apache-2.0
license-file:    LICENSE
maintainer:      conao3@gmail.com
author:          conao3
build-type:      Simple
extra-doc-files: CHANGELOG.md

executable hasp
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base ^>=4.19.2.0
